--- a/createTask/package.json
+++ b/createTask/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "createtask",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.3"
   }
