--- a/app/package.json
+++ b/app/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^6.0.1"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "tailwindcss": "^3.4.17"
   }
 }
