--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,6 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
   },
-  "main": "tailwind.config.js",
   "dependencies": {
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
@@ -46,7 +45,6 @@
     "fill-range": "^7.1.1",
     "foreground-child": "^3.3.0",
     "fraction.js": "^4.3.7",
-    "fsevents": "^2.3.3",
     "function-bind": "^1.1.2",
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
@@ -115,6 +113,9 @@
     "wrap-ansi": "^8.1.0",
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.7.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   },
   "keywords": [],
   "author": "",
