--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -1,8 +1,6 @@
 [build]
-  command = "go build"  
+  command = "npm run build"
   publish = "dist"  
 
 [build.environment]
-  GO_VERSION = "1.19" 
-
-  
+  NODE_VERSION = "16"  
