--- a/app/package.json
+++ b/app/package.json
@@ -15,60 +15,13 @@
     "vite": "^6.0.7"
   },
   "dependencies": {
-    "ansi-regex": "^6.1.0",
-    "ansi-styles": "^6.2.1",
-    "any-promise": "^1.3.0",
-    "anymatch": "^3.1.3",
-    "arg": "^5.0.2",
-    "balanced-match": "^1.0.2",
-    "brace-expansion": "^2.0.1",
     "browserslist": "^4.24.3",
-    "chokidar": "^3.6.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "commander": "^4.1.1",
-    "cross-spawn": "^7.0.6",
     "cssesc": "^3.0.0",
-    "didyoumean": "^1.2.2",
-    "dlv": "^1.1.3",
-    "esbuild": "^0.24.0",
-    "fast-glob": "^3.3.2",
-    "fastq": "^1.18.0",
-    "fill-range": "^7.1.1",
-    "glob": "^10.4.5",
-    "glob-parent": "^6.0.2",
-    "is-binary-path": "^2.1.0",
-    "is-glob": "^4.0.3",
-    "isexe": "^2.0.0",
-    "micromatch": "^4.0.8",
-    "minimatch": "^9.0.5",
-    "minipass": "^7.1.2",
-    "nanoid": "^3.3.8",
-    "normalize-path": "^3.0.0",
-    "object-assign": "^4.1.1",
     "picocolors": "^1.1.1",
-    "picomatch": "^2.3.1",
-    "postcss-import": "^15.1.0",
-    "postcss-js": "^4.0.1",
-    "postcss-load-config": "^4.0.2",
-    "postcss-nested": "^6.2.0",
-    "postcss-selector-parser": "^6.1.2",
-    "postcss-value-parser": "^4.2.0",
-    "resolve": "^1.22.10",
-    "rollup": "^4.28.1",
-    "sucrase": "^3.35.0",
-    "thenify": "^3.3.1",
-    "to-regex-range": "^5.0.1",
-    "ts-interface-checker": "^0.1.13",
-    "update-browserslist-db": "^1.1.1",
-    "util-deprecate": "^1.0.2",
-    "which": "^2.0.2",
-    "wrap-ansi": "^8.1.0",
-    "yaml": "^2.7.0"
+    "postcss-import": "^15.1.0", 
+    "postcss-nested": "^6.2.0"  
   },
-  "optionalDependencies": {
-    "fsevents": "^2.3.3"
-  },
+  "optionalDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
