--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "npm run build"
-  publish = "dist"  
+  command = "nvm install 16 && npm run build"
+  publish = "dist"
+
 
 [build.environment]
-  NODE_VERSION = "16"  
+  NODE_VERSION = "16"
