--- a/app/package.json
+++ b/app/package.json
@@ -9,21 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.7"
+    "vite": "^5.4.10"
   },
   "dependencies": {
-    "browserslist": "^4.24.3",
-    "cssesc": "^3.0.0",
-    "picocolors": "^1.1.1",
-    "postcss-import": "^15.1.0", 
-    "postcss-nested": "^6.2.0"  
-  },
-  "optionalDependencies": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14"
+  }
 }
